--- a/sec.html
+++ b/sec.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>مطعم شاورما على كيفك</h1>
-      <img src="./img/مطعم شاورما على كيفك.jpg"  >
+      <img src="./img/مطعم شاورما على كيفك.jpg" width="450" >
       
         <ul>
             <li>باشكا</li>
